# AI-Money-Mentor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  app.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PR_Template.md
.github/Issues_Template/: bug_report.md  feature_request.md
.github/workflows/: pin-floor.sed  pr-labeler.yml  security.yml  stale.yml
docs/: SECURITY_AUDIT.md
scratch/: debug_auth.py
static/scripts/: dashboard.js  escape.js  (+4 more)
templates/: agent.html  bank_integration.html  base.html  budget.html  chat.html  couple_planner.html  crypto.html  dashboard.html  dashboard_new.html  document_parser.html  expense.html  fire_planner.html  goal_planner.html  goals.html  index.html  insurance.html  learn.html  ledger.html  loan_planner.html  milestones.html  multi_agent.html  networth.html  notification.html  pdf.html  portfolio.html  portfolio_optimizer.html  predictive_alerts.html  rag_assistant.html  ratio_analyzer.html  rebalancer.html  recurring.html  recurring_income.html  retirement.html  risk_advisor.html  score.html  security_settings.html  settings.html  sip.html  stock.html  tax.html  (+4 more)
tests/: test_budget.py  test_expense_crud.py  test_money_score.py  test_networth_integration.py  test_networth_pk_fix.py  test_offline_fallback.py  test_portfolio.py  test_price_alerts.py  test_sip.py  test_validation.py
utils/: couple_finance.py  expense_track.py  financial_ratio_analyzer.py  ledger.py  loan_planner.py  multi_agent.py  portfolio_optimizer.py  stock.py  tax.py  tax_filing.py
(+1 files in other folders)
